added Energy Drinks

--- a/EnergyDrinks/Redbull.html
+++ b/EnergyDrinks/Redbull.html
@@ -2,6 +2,7 @@
     <a href="../index.html">Go Back</a>
     <head>
          <title>Redbull</title>
+         <link rel="stylesheet" href="Redbull.css">
     </head>
     <body>
         <h1>Redbull</h1>
