--- a/EnergyDrinks/Monster.html
+++ b/EnergyDrinks/Monster.html
@@ -2,6 +2,7 @@
     <a href="../index.html">Go Back</a>
     <head>
       <title>Monster</title>
+      <link rel="stylesheet" href="Monster.css">
     </head>
     <body>
         <h1>Monster</h1>
