--- a/EnergyDrinks/GFuel.html
+++ b/EnergyDrinks/GFuel.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>G Fuel</h1>
-        <img alt="Picture of G Fuel" src="../GFuel.jpeg" class="center">
+        <img alt="Picture of G Fuel" src="../GFuel.jpeg" class="center" width="400" height="500">
         <h4>Place to search</h4>
         <a href="http://www.google.com/">Search about G Fuel here</a>
     
