--- a/EnergyDrinks/Monster.html
+++ b/EnergyDrinks/Monster.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Monster</h1>
-        <img alt="Picture of Monster" src="../Monster.jpeg"/>
+        <img alt="Picture of Monster" src="../Monster.jpeg" class="center" width="50" height="400"/>
         <h4>Place to search</h4>
         <a href="http://www.google.com/">Search about Monster Here</a>
 
