--- a/EnergyDrinks/Redbull.html
+++ b/EnergyDrinks/Redbull.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Redbull</h1>
-        <img alt="Picture of Redbull" src="../Redbull.jpeg">
+        <img alt="Picture of Redbull" src="../Redbull.jpeg" class="center" width="50" height="400">
         <h4>Place to search</h4>
         <a href="http://www.google.com/">Search about Redbull here</a>
 
